force-app/main/default/objects/Music_Product_Order__c/fields/Billing_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Country__c</fullName>
    <description>Country that billing information belongs to.</description>
    <label>Billing Address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>