force-app/main/default/objects/Music_Product_Order__c/fields/Billing_Address_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Zipcode__c</fullName>
    <label>Billing Address Zipcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>