force-app/main/default/objects/Music_Product_Order__c/fields/Customer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_First_Name__c</fullName>
    <description>Customer&apos;s first name</description>
    <label>Customer First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>