force-app/main/default/objects/Music_Product_Order__c/fields/Customer_s_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Last_Name__c</fullName>
    <description>Customer&apos;s last name.</description>
    <label>Customer&apos;s Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>