force-app/main/default/objects/Music_Product_Order__c/fields/Music_Product_Purchased_1__c.field-meta.xml
<CustomField>
    <fullName>Music_Product_Purchased_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Music Product_Purchased 1</label>
    <referenceTo>Music_Product__c</referenceTo>
    <relationshipLabel>Music Product Orders</relationshipLabel>
    <relationshipName>Music_Product_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>