force-app/main/default/objects/Music_Product_Order__c/fields/Number_of_Music_Products_1_ordered__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Music_Products_1_ordered__c</fullName>
    <label>Number of Music Products 1 ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>