force-app/main/default/objects/Music_Product_Order__c/fields/Order_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Start_Date__c</fullName>
    <description>The date the order was placed</description>
    <label>Order Start Date</label>
    <type>Date</type>
</CustomField>