force-app/main/default/objects/Music_Product_Order__c/fields/Purchase_Type__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Type__c</fullName>
    <description>How did the customer make the purchase.</description>
    <label>Purchase Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>In Store</fullName>
            </value>
            <value>
                <fullName>Over the Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>