force-app/main/default/objects/Music_Product_Order__c/fields/Shipping_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Country__c</fullName>
    <description>The country the product is being shipped to</description>
    <label>Shipping Address Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>