force-app/main/default/objects/Music_Product_Order__c/fields/Shipping_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_State__c</fullName>
    <description>The state or province the product is being shipped to.</description>
    <label>Shipping Address State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>