force-app/main/default/objects/Music_Product_Order__c/fields/Shipping_Address_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Zipcode__c</fullName>
    <description>Zipcode that product is being shipped to.</description>
    <label>Shipping Address Zipcode</label>
    <length>16</length>
    <type>Text</type>
</CustomField>