force-app/main/default/objects/Music_Product_Order__c/fields/Shipping_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street_Address__c</fullName>
    <description>Street Address to be shipped to</description>
    <label>Shipping Street Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>